<resources>
    <string name="app_name">Book Memo</string>
    <string name="content_authority">com.pklein.bookmemo.app</string>

    <!-- button description -->
    <string name="desc_library_button">button to display your library</string>
    <string name="desc_add_button">button to add a book</string>
    <string name="desc_search_button">button to search a book</string>
    <string name="desc_stats_button">button to display statistics</string>
    <string name="validate_button">Validate</string>
    <string name="desc_validate_button">button to validate Search</string>
    <string name="delete_button">Delete</string>
    <string name="desc_delete_button">button to delete Info</string>
    <string name="plus_button">+1</string>
    <string name="desc_plus_button">Image button to upgrade value</string>
    <string name="readMore_button">Read More</string>
    <string name="desc_readMore_button">button clickable to connect to internet to read more</string>

    <!-- image description -->
    <string name="desc_update_image">Image button to update Info</string>
    <string name="ProgressBar_content_description">Progress Bar</string>
    <string name="image_appbar">Image of data</string>
    <string name="image_main">Image of a Book</string>

    <!-- menu -->
    <string name="action_import">Import</string>
    <string name="action_export">Export</string>
    <string name="action_about">About</string>
    <string name="TAB_literature">Literature</string>
    <string name="TAB_manga">Manga</string>
    <string name="TAB_comic">Comic</string>
    <string name="TAB_global">Global</string>

    <!-- Titles -->
    <string name="title_seeAll">My Library</string>
    <string name="error_message">An error has occurred</string>
    <string name="error_wiki">No Information Found</string>
    <string name="error_found">No Book Found</string>
    <string name="title_add">Add a book</string>
    <string name="title_update">Update a book</string>
    <string name="title_readMore">Read More on Wikipedia</string>
    <string name="str_searchBook">Search a book</string>
    <string name="title_stats">Statistics</string>

    <!-- AlertDialog-->
    <string name="increment_book">Do you want to increment one characteristic below ?</string>
    <string name="increment_tome">Tome</string>
    <string name="increment_chapter">Chapter</string>
    <string name="increment_episode">Episode</string>
    <string name="modify_book">Do you want to Modify this Book ?</string>
    <string name="delete_book">Do you want to Delete this Book ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty_title">Title can\'t be empty</string>
    <string name="add_error">An error has occurred, this book is already into the Library</string>
    <string name="update_error">An error has occurred during Update</string>
    <string name="file_error">An error has occurred during the process</string>
    <string name="file_OK_export">File correctly exported into Download Directory</string>
    <string name="file_OK_import">File correctly imported</string>
    <string name="file_absent">An error has occurred : no File Found </string>
    <string name="file_csv">An error has occurred : File must be CSV </string>
    <string name="delete_ok">Suppression succeed !</string>

    <!--SearchActivity-->
    <string name="hint_editText">edit</string>
    <string name="str_title">Title : </string>
    <string name="str_author">Author : </string>
    <string name="str_author_unknown">Unknown Author </string>
    <string name="str_year">Year : </string>
    <string name="str_all">All</string>
    <string name="str_type">Type : </string>
    <string name="str_type1">Literature </string>
    <string name="str_type2">Manga </string>
    <string name="str_type3">Comic </string>
    <string name="str_collection">Collection : </string>
    <string name="str_collection1">Pending</string>
    <string name="str_collection2">Finished</string>
    <string name="str_bought">Bought : </string>
    <string name="str_chapter">Chapter filled : </string>
    <string name="str_episode">Episode filled : </string>
    <string name="str_favorite">Favorite (add to Widget) : </string>
    <string name="str_favorite_yes">Favorite</string>
    <string name="str_tome">Tome : </string>
    <string name="str_chapter_read">Chapter : </string>
    <string name="str_episode_seen">Episode : </string>
    <string name="str_Desc">Description : </string>
    <string name="str_bought_display">Bought </string>

    <!-- internet -->
    <string name="Wiki_URL">https://en.wikipedia.org/w/api.php</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- CHART -->
    <string name="manga_read">Manga Read</string>
    <string name="manga_read_diff">Serie Read</string>
    <string name="manga_bought">Manga bought</string>
    <string name="anime_seen">Anime Seen</string>
    <string name="count">Number of elements</string>

    <!-- ABOUT -->
    <string name="action_about_title">About CSV</string>
    <string name="about_Bigtitle">In order to import a CSV File</string>
    <string name="about_description">Create a CSV file from your computer and call it BookMemo.csv.
        You can also click on Export button of the application, to get an example file.
        The File can be copied inside /BookMemo Directory into your Phone root Directory. Then just clicked on Import button and select the right file.</string>
    <string name="about_columns">Here are the 11 columns you need to write into your file :</string>
    <string name="about_title">Title</string>
    <string name="about_title_desc">Title of your books</string>
    <string name="about_author">Author</string>
    <string name="about_author_desc">Author of your books</string>
    <string name="about_desc">Description</string>
    <string name="about_desc_desc">One description</string>
    <string name="about_Type">Type</string>
    <string name="about_Type_desc">The type : it can only be one of these 3 : LITERATURE, MANGA ou COMIC</string>
    <string name="about_year">Year</string>
    <string name="about_year_desc">Published Year, 0 by default</string>
    <string name="about_bought">Bought</string>
    <string name="about_bought_desc">If the book has been bought, write 1 otherwhise 0</string>
    <string name="about_Finish">Finish</string>
    <string name="about_Finish_desc">If the Serie is finished, write 1 otherwhise 0</string>
    <string name="about_Tome">Tome</string>
    <string name="about_Tome_desc">Number of Tomes read, 0 by default</string>
    <string name="about_Chapter">Chapter</string>
    <string name="about_Chapter_desc">Number of Chapters read, 0 by default</string>
    <string name="about_Episode">Episode</string>
    <string name="about_Episode_desc">Number of Animes seen, 0 by default</string>
    <string name="about_Favorite">Favorite</string>
    <string name="about_Favorite_desc">If the book is a favorite one, write 1 otherwhise 0</string>
</resources>
