<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout  android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="left">
        <TextView
            android:id="@+id/about_Bigtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGold"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/about_Bigtitle" />

        <TextView
            android:id="@+id/about_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_margin="10dp"
            android:text="@string/about_description" />

        <TextView
            android:id="@+id/about_columns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_margin="10dp"
            android:text="@string/about_columns" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/about_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGold"
                    android:text="@string/about_title" />
                <TextView
                    android:id="@+id/about_title_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorBluePale"
                    android:text="@string/about_title_desc" />
            </TableRow>

            <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/about_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGold"
                    android:text="@string/about_author" />
                <TextView
                    android:id="@+id/about_author_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorBluePale"
                    android:text="@string/about_author_desc" />
            </TableRow>

            <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/about_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGold"
                    android:text="@string/about_desc" />
                <TextView
                    android:id="@+id/about_desc_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorBluePale"
                    android:text="@string/about_desc_desc" />
            </TableRow>

            <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/about_Type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGold"
                    android:text="@string/about_Type" />
                <TextView
                    android:id="@+id/about_Type_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorBluePale"
                    android:text="@string/about_Type_desc" />
            </TableRow>

            <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/about_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGold"
                    android:text="@string/about_year" />
                <TextView
                    android:id="@+id/about_year_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorBluePale"
                    android:text="@string/about_year_desc" />
            </TableRow>

            <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/about_bought"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGold"
                    android:text="@string/about_bought" />
                <TextView
                    android:id="@+id/about_bought_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorBluePale"
                    android:text="@string/about_bought_desc" />
            </TableRow>

            <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/about_Finish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGold"
                    android:text="@string/about_Finish" />
                <TextView
                    android:id="@+id/about_Finish_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorBluePale"
                    android:text="@string/about_Finish_desc" />
            </TableRow>

            <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/about_Tome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGold"
                    android:text="@string/about_Tome" />
                <TextView
                    android:id="@+id/about_Tome_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorBluePale"
                    android:text="@string/about_Tome_desc" />
            </TableRow>

            <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/about_Chapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGold"
                    android:text="@string/about_Chapter" />
                <TextView
                    android:id="@+id/about_Chapter_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorBluePale"
                    android:text="@string/about_Chapter_desc" />
            </TableRow>

            <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/about_Episode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textColor="@color/colorGold"
                    android:text="@string/about_Episode" />
                <TextView
                    android:id="@+id/about_Episode_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorBluePale"
                    android:text="@string/about_Episode_desc" />
            </TableRow>

            <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/about_Favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGold"
                    android:text="@string/about_Favorite" />
                <TextView
                    android:id="@+id/about_Favorite_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorBluePale"
                    android:text="@string/about_Favorite_desc" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</ScrollView>
