<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/homepage_background"
    >

    <ImageButton android:id="@+id/library_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:contentDescription="@string/desc_library_button"
        android:background="@null"
        android:src="@drawable/library_button"
        />

    <ImageButton android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:contentDescription="@string/desc_add_button"
        android:background="@null"
        android:src="@drawable/add_button"
        />

    <ImageButton android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:contentDescription="@string/desc_search_button"
        android:background="@null"
        android:src="@drawable/search_button"
        />

    <ImageButton android:id="@+id/stats_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:contentDescription="@string/desc_stats_button"
        android:background="@null"
        android:src="@drawable/stats_button"
        />
</LinearLayout>