<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView02"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:theme="@style/AppTheme2">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <include layout="@layout/form_add_modify" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button android:id="@+id/validate_button_update"
                style="@style/ColorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:contentDescription="@string/desc_validate_button"
                android:text="@string/validate_button"
                android:textColor="@color/colorWhite" />

            <Button android:id="@+id/delete_button"
                style="@style/ColorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:contentDescription="@string/desc_delete_button"
                android:text="@string/delete_button"
                android:textColor="@color/colorWhite" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>